--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,6 +2,30 @@
     box-sizing: border-box
 html
     font-family: 'Montserrat', sans-serif
+@-webkit-keyframes scale-up-ver-top
+    0%
+        -webkit-transform: scaleY(0.4)
+                transform: scaleY(0.4)
+        -webkit-transform-origin: 100% 0%
+                transform-origin: 100% 0%
+    100%
+        -webkit-transform: scaleY(1)
+                transform: scaleY(1)
+        -webkit-transform-origin: 100% 0%
+                transform-origin: 100% 0%
+@keyframes scale-up-ver-top 
+    0%
+        -webkit-transform: scaleY(0.4)
+                transform: scaleY(0.4)
+        -webkit-transform-origin: 100% 0%
+                transform-origin: 100% 0%
+
+    100%
+    -webkit-transform: scaleY(1)
+            transform: scaleY(1)
+    -webkit-transform-origin: 100% 0%
+            transform-origin: 100% 0%
+
 .container
     margin: 0 auto
     position: relative
@@ -81,8 +105,6 @@ input
     border: 1px solid #bbb
     background: #ffff
     z-index: 2
-    -webkit-animation: scale-up-ver-top 0.6s both
-    animation: scale-up-ver-top 0.6s both
     &_button
         position: absolute
         top: 8px
@@ -553,3 +575,192 @@ input
     text-decoration: none
     outline: none
     color: #ffffff
+@media ( max-width: 450px )
+    .container
+        margin: 0 auto
+        position: relative
+        max-width: 100%
+    .container-phone
+        margin: 0 auto
+        position: relative
+        max-width: 100%
+        overflow: hidden
+    .first-section
+        height: 391px
+        position: relative
+        margin-bottom: 0px
+    .navigation-menu
+        display: none
+    .nav-menu
+        display: flex
+        height: 57px
+        background-color: #ffffff
+        flex-direction: row
+        align-items: center
+        &__button
+            outline: none
+            text-decoration: none
+            border: none
+            background-color: #ffffff
+            margin-right: 53px
+            cursor: pointer
+            &_img
+                margin-top: 1px
+                margin-left: 20px
+                height: 23px
+                width: 33px
+    .logo_text
+        font-size: 20px
+        margin-right: 53px
+    .burger-2
+        display: none
+    .burger
+        position: absolute
+        height: 630px
+        width: 100%
+        background-color: #FFFFFF
+        z-index: 2
+        -webkit-animation: scale-up-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
+        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
+
+    .navigation-menu__icons_item
+        margin-left: 21px
+        margin-top: 20px
+        margin-right: 16px
+    .burger
+        &__search
+            display: flex
+            flex-direction: row
+            align-items: center
+        &__input
+            margin-top: 23px
+            outline: none
+            border: none
+            transition: none
+            font-size: 21px
+        &__sign
+            display: flex
+            align-items: center
+            margin-bottom: 50px
+            &_text
+                margin-top: 23px
+                font-size: 21px
+                color: #747474
+        &__button
+            outline: none
+            text-decoration: none
+            border: none
+            cursor: pointer
+            background-color: #ffffff
+        &_ul
+            margin-left: 21px
+        &_item
+            font-weight: 400
+            font-size: 22px
+            margin-bottom: 30px
+            &:last-child
+                margin-bottom: 89px
+        &_logo
+            margin-left: 28%
+    .navigation-menu__items_ul
+        z-index: 2
+    .scale-up-ver-top
+        -webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
+        animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
+    .background
+        display: none
+    .first-section_footer
+        display: none
+    .first-section_footer-1
+        display: none
+    .gif-phone
+        width: 375px
+    .first-section__content_title
+        font-size: 16px
+    .first-section__content
+        height: 200px
+        width: 100%
+        z-index: 1
+        margin-left: 20px
+        &_text
+            position: absolute
+            top: 93px
+            font-size: 9px
+            width: 287px
+        &_button
+            top: 170px
+            &_setting
+                width: 115px
+                height: 30px
+                padding-top: 5px
+            &_text
+                font-size: 10px
+    .container-phone-2
+        top: 176px
+        position: absolute
+        height: 200px
+        width: 100%
+    .interval-section_background
+        width: 600px
+        margin-left: 42px
+        z-index: 0
+    .interval-section_vector
+        top: 85px
+        width: 99px
+    .second-section
+        height: 400px
+        z-index: 1
+        &__content-box
+            position: static
+            width: 290px
+            height: 170px
+            transition: none
+            z-index: 1
+            overflow: none
+            &_title
+                padding-top: 8px
+                font-size: 20px
+                padding-left: 36px
+                height: 42px
+            &_text
+                font-size: 12px
+                width: 192px
+                padding-left: 32px
+                width: 160px
+            &_button
+                height: 35px
+                width: 35px
+                margin-left: 50px
+            &_img
+                height: 15px
+                width: 17px
+                top: 8px
+                left: 9px
+            &__right-wrapper
+                top: -72px
+                left: 51px
+                &_img
+                    width: 322px
+                    height: 288px
+    .wrapper-2
+        display: none
+    .first_phone
+        position: absolute
+        left: 40px
+        top: -22px
+    .third-section__a
+        width: 25px
+        height: 25px
+@media (  min-width: 451px )
+    .nav-menu
+        display: none
+    .burger
+        display: none
+    .background-phone
+        display: none
+    .background-phone-2
+        display: none
+    .gif-phone
+        display: none
+
+
