--- a/sass/style.sass
+++ b/sass/style.sass
@@ -604,16 +604,18 @@ input
             text-decoration: none
             border: none
             background-color: #ffffff
-            margin-right: 16%
             cursor: pointer
-            &_img
-                margin-top: 1px
-                margin-left: 32%
-                height: 23px
-                width: 33px
+            margin-top: 1%
+            &_hr
+                margin-left: 61%
+                borger: 1px solid black
+    .hr-0
+        width: 17px
+    .hr-1
+        width: 24px
     .logo_text
+        margin: 0 auto
         font-size: 20px
-        margin-right: 18%
     .burger-2
         display: none
     .burger
@@ -624,7 +626,8 @@ input
         z-index: 2
         -webkit-animation: scale-up-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
         animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both
-
+    .navigation-menu__icons_item-1
+        margin-left: -67%
     .navigation-menu__icons_item
         margin-left: 21px
         margin-top: 20px
@@ -664,6 +667,8 @@ input
                 margin-bottom: 89px
         &_logo
             margin-left: 28%
+    .urna_img
+
     .navigation-menu__items_ul
         z-index: 2
     .scale-up-ver-top
@@ -680,6 +685,7 @@ input
         font-size: 16px
     .first-section
         overflow: visible
+        position: relative
     .first-section__content
         position: relative
         top: -87%
@@ -716,13 +722,26 @@ input
         z-index: 0
         
     .interval-section_vector
-        top: 85px
+        top: 61%
         width: 99px
         z-index: 2
     .second-section
         margin: 0 auto
-        height: 400px
-        z-index: 1
+        width: 100%
+        min-height: 435px
+        &__text-box
+            width: 100%
+            top: 420px
+        &__text-2
+            font-size: 19px
+            height: 4px
+        &__title-2
+            margin-top: 0px
+            font-size: 24px
+            height: 51px
+            margin-bottom: 2%
+        &__text-3
+            font-size: 19px
         &__content-box
             position: static
             width: 290px
@@ -758,12 +777,11 @@ input
                 &_img
                     width: 322px
                     height: 288px
-    .wrapper-2
-        display: none
+        &__title-2
+            width: 100%
     .first_phone
-        position: absolute
-        margin-left: 12%
-        top: -22px
+        position: relative
+        z-index: 0
     .third-section__a
         width: 25px
         height: 25px
@@ -776,6 +794,31 @@ input
         position: relative
         overflow: hidden
         position: static
+    .second-content-box
+        top: 55%
+        margin: 0 auto
+        margin-bottom: 10%
+    .first-content-box
+        margin: 0 auto
+        top: -22px
+    .third-section
+        &__title
+            font-size: 17px
+            margin-left: 2%
+        &__slider_button-item
+            height: 35px
+            width: 35px
+            left: -9%
+            top: 47px
+        &__slider-item
+            margin: 0 auto
+            height: 449px
+            width: 351px
+        &__slider-img
+            width: 301px
+            height: 252px
+    .content-box
+        width: 100%
 @media (  min-width: 451px )
     .nav-menu
         display: none
