--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,7 @@ input {
   }
   .second-section__content-box__right-wrapper {
     top: -72px;
-    left: 51px;
+    left: 43px;
   }
   .second-section__content-box__right-wrapper_img {
     width: 322px;
@@ -1036,18 +1036,22 @@ input {
     top: -22px;
   }
 
+  .third-section {
+    height: 668px;
+  }
   .third-section__title {
     font-size: 17px;
     margin-left: 2%;
   }
   .third-section__slider_button-item {
-    height: 35px;
-    width: 35px;
-    left: -9%;
+    height: 40px;
+    width: 49px;
+    left: -8%;
     top: 47px;
+    padding: 0px;
   }
   .third-section__slider-item {
-    margin: 0 auto;
+    margin-right: 50px;
     height: 449px;
     width: 351px;
   }
@@ -1055,9 +1059,98 @@ input {
     width: 301px;
     height: 252px;
   }
+  .third-section__slider-line {
+    margin: 0 auto;
+    left: 0px;
+    width: 2375px;
+  }
 
   .content-box {
+    position: relative;
     width: 100%;
+    margin: 0 auto;
+    padding-left: 4%;
+  }
+
+  .prev {
+    left: -13%;
+  }
+
+  .button-phone {
+    margin-left: 80%;
+  }
+
+  .img-button {
+    padding-left: 3px;
+    padding-top: 5px;
+  }
+
+  .fourth-section {
+    width: 100%;
+  }
+  .fourth-section_title {
+    font-size: 19px;
+    margin-left: 6%;
+  }
+  .fourth-section__content-boxes {
+    width: 100%;
+  }
+  .fourth-section__content-box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .box-1_text {
+    color: #ffffff;
+    z-index: 2;
+    position: absolute;
+    margin: 0 auto;
+    margin-left: 13%;
+  }
+
+  .box-2_gif-phone {
+    width: 644px;
+    height: 100%;
+    margin-left: -42%;
+  }
+
+  .gif-1 {
+    display: none;
+  }
+
+  .box-3-phone {
+    margin-left: -32%;
+  }
+
+  .box-1_phone {
+    position: absolute;
+    top: 45%;
+    left: 22%;
+  }
+
+  .box-2-phone {
+    position: absolute;
+    top: 49%;
+    height: 100%;
+    width: 199px;
+  }
+
+  .content-box-phone {
+    width: 100%;
+    height: 100%;
+  }
+
+  .box-6_gif {
+    position: absolute;
+    top: 50.7%;
+    z-index: 1;
+  }
+
+  .box-phone {
+    margin-top: 106%;
   }
 }
 @media (min-width: 451px) {
@@ -1077,7 +1170,7 @@ input {
     display: none;
   }
 
-  .gif-phone {
+  .box-2_gif-phone {
     display: none;
   }
 }
