--- a/sass/style.sass
+++ b/sass/style.sass
@@ -207,6 +207,7 @@ input
         display: flex
         flex-direction: row
         overflow: hidden
+        display: none
     &_footer-1
         padding-left: 1136px
         position: absolute
@@ -501,7 +502,7 @@ input
     font-size: 40px
     line-height: 48p
     &__content-box
-        background-image: url("/nike-store/img/image 11.png")
+        background-image: url("img/image 11.png")
         height: 324px
         width: 1400px
         margin: 0 auto
@@ -575,7 +576,14 @@ input
     text-decoration: none
     outline: none
     color: #ffffff
+.fourth-section_gif
+    height: 100%
+
+
+
 @media ( max-width: 450px )
+    html
+        width: 100%
     .container
         margin: 0 auto
         position: relative
@@ -586,12 +594,14 @@ input
         max-width: 100%
         // overflow: hidden
     .first-section
+        width: 100%
         height: 391px
         position: relative
         margin-bottom: 6%
         z-index: 1
     .navigation-menu
         display: none
+    .third-section
     .nav-menu
         display: flex
         height: 57px
@@ -609,6 +619,10 @@ input
             &_hr
                 margin-left: 61%
                 borger: 1px solid black
+                text-decoration: none
+                outline: none
+                cursor: pointer
+                transition: 0.5s
     .hr-0
         width: 17px
     .hr-1
@@ -690,7 +704,7 @@ input
         position: relative
         top: -87%
         height: 36vw
-        width: 100%
+        width: 71%
         z-index: 1
         margin-left: 20px
         padding-top: 1%
@@ -714,6 +728,8 @@ input
         // top: 53%
         position: absolute
         height: 200px
+        width: 100%
+    .interval-section
         width: 100%
     .interval-section_background
         width: 600px
@@ -803,6 +819,9 @@ input
         top: -22px
     .third-section
         height: 668px
+        width: 100%
+        &__content-box
+            margin: 0 auto
         &__title
             font-size: 17px
             margin-left: 2%
@@ -827,7 +846,7 @@ input
         position: relative
         width: 100%
         margin: 0 auto
-        padding-left: 4%
+        padding-left: 7%
     .prev
         left: -13%
     .button-phone
@@ -837,6 +856,7 @@ input
         padding-top: 5px
     .fourth-section
         width: 100%
+        height: 1219px
         &_title
             font-size: 19px
             margin-left: 6%
@@ -865,7 +885,7 @@ input
     .box-1_phone
         position: absolute
         top: 45%
-        left: 22%
+        left: 80%
     .box-2-phone
         position: absolute
         top: 49%
@@ -880,6 +900,125 @@ input
         z-index: 1
     .box-phone
         margin-top: 106%
+    .gif-44
+        width: 155%
+    .fifth-section_title
+        display: none
+    .fifth-section_title_p
+        font-weight: 900
+        font-style: italic
+        font-size: 24px
+        line-height: 29px
+    .p-1
+        margin-left: 4%
+    .p-2
+        margin-left: 20%
+    .p-3
+        margin-left: 40%
+        margin-bottom: 5%
+    .fifth-section
+        width: 100%
+        overflow: hidden
+        &__boxes
+            position: relative
+            flex-direction: column
+            margin: 0 auto
+        &_content-box
+            width: 337px
+            height: 137px
+            margin-right: 0%
+            padding-left: 24px
+            padding-top: 35px
+            margin-top: 10%
+            margin-left: 9%
+        &_content-title
+            font-size: 15px
+            padding-bottom: 0px
+            &_span
+                font-size: 21px
+        &_content-text
+            font-size: 15px
+            margin-bottom: 0px
+        &_content-button
+            display: none
+    .fifth-section_content-button-phone
+        width: 35px
+        height: 35px
+        border-radius: 20px
+        outline: none
+        text-decoration: none
+        border: none
+    .fifth-section_content-img
+        width: 280px
+        height: 245px
+        top: -95px
+        left: 149px
+    .sixth-section_title
+        font-size: 17px
+        margin-left: 4%
+        margin-bottom: 6%
+    .sixth-section__content-box
+        background-image: none
+        width: 100%
+    .sixth-section__content-box-phone
+        width: 100%
+        height: 21%
+        z-index: -1
+        position: absolute
+    .sixth-section__content-title
+        font-size: 24px
+        padding-top: 12px
+        line-height: 28px
+        padding-left: 21px
+        padding-bottom: 4px
+    .sixth-section__content-text
+        padding-left: 21px
+        padding-bottom: 0%
+        width: 371px
+        font-size: 15px
+    .sixth-section__content-button
+        width: 121px
+        height: 29px
+        margin-left: 21px
+        border-radius: 9px
+    .sixth-section
+        width: 100%
+        height: 212px
+    .footer
+        overflow: hidden
+        width: 100%
+        height: 205px
+    .footer__content-box_text
+        font-size: 13px
+    .footer_box-1
+        margin-top: 10%
+        margin-left: 3%
+    .footer_box-2
+        margin-top: 10%
+        margin-right: 3%
+    .footer__content-box_text
+        padding-bottom: 26px
+    .footer_img-1
+        position: relative
+        width: 55%
+        z-index: 1
+        margin-left: 0px
+    .footer_img
+        position: absolute
+        top: -2%
+        left: 31%
+    .hr-deactive
+        display: none
+        transition: 0.5s
+    .hr-active
+        width: 24px
+        transform: rotate(45deg)
+        transition: 0.5s
+    .hr-active-2
+        width: 24px
+        transform: rotate(-45deg)
+        margin-top: -10px
+        transition: 0.5s
 @media (  min-width: 451px )
     .nav-menu
         display: none
@@ -890,5 +1029,13 @@ input
     .background-phone-2
         display: none
     .box-2_gif-phone
+        display: none
+    .none
+        display: none
+    .fifth-section_title_phone
+        display: none
+    .fifth-section_content-button-phone
+        display: none
+    .sixth-section__content-box-phone
         display: none
 
