--- a/sass/style.sass
+++ b/sass/style.sass
@@ -502,7 +502,7 @@ input
     font-size: 40px
     line-height: 48p
     &__content-box
-        background-image: url("img/image 11.png")
+        background-image: url("/nike-store/img/image 11.png")
         height: 324px
         width: 1400px
         margin: 0 auto
@@ -889,7 +889,7 @@ input
     .box-2-phone
         position: absolute
         top: 49%
-        height: 100%
+        height: 99%
         width: 199px
     .content-box-phone
         width: 100%
@@ -910,6 +910,7 @@ input
         font-size: 24px
         line-height: 29px
     .p-1
+        margin-top: 2%
         margin-left: 4%
     .p-2
         margin-left: 20%
@@ -957,7 +958,7 @@ input
         font-size: 17px
         margin-left: 4%
         margin-bottom: 6%
-    .sixth-section__content-box
+    .sixth-section__content-box-phone
         background-image: none
         width: 100%
     .sixth-section__content-box-phone
